# ocaml-irc

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.org  irc.opam  ocaml-irc.opam
examples/: dune  jbuild  mirror.ml  server.ml
src/: client.ml  dune  irc.ml  jbuild  server.ml
src/client/: connection.ml  dune  generic.ml  irc_client.ml  jbuild  server.ml  skeleton.ml
src/common/: dune  extFormat.ml  extHashtbl.ml  extPervasives.ml  irc_common.ml  log.ml  result.ml
src/helpers/: command.ml  connection.ml  connection.mli  dune  error.ml  handler.ml  reply.ml
src/internal_ppx/: common.ml  dune  handler.ml  irc_internal_ppx.ml  parser.ml  printer.ml
src/model/: channel.ml  channel.mli  command.ml  command.mli  dune  error.ml  helpers.ml  identity.ml  identity.mli  irc_model.ml  jbuild  message.ml  message.mli  misc.ml  negLexing.ml  nickname.ml  nickname.mli  prefix.ml  reply.ml  sl.ml  suffix.ml  target.ml
src/utils/: channel.ml  channel.mli  command.ml  command.mli  dune  error.ml  error.mli  extPervasives.ml  handler.ml  identity.ml  irc_utils.ml  jbuild  message.ml  nickname.ml  reply.ml  socket.ml
