opam-version: "1.2"

name: "irc"
version: "0.1"

authors: "Niols <niols@niols.fr>"
maintainer: "Niols <niols@niols.fr>"

homepage: "https://github.com/LesBoloss-es/irc"
bug-reports: "https://github.com/LesBoloss-es/irc/issues"
dev-repo: "git://github.com/LesBoloss-es/irc.git"

depends: [
  "dune"     {build}
  "lwt"
  "ppx_inline_test"
  "ppxfind"  {build}
]

build: ["dune" "build" "-p" name "-j" jobs]
